--- a/config/consecration-server.toml
+++ b/config/consecration-server.toml
@@ -14,7 +14,7 @@
 	#Range: 0 ~ 100
 	holyVulnerableDuration = 18
 	#The materials that will be considered holy.
-	holyMaterials = ["silver", "gold", "refined glowstone", "psimetal"]
+	holyMaterials = ["silver", "gold", "glowstone", "psimetal", "nightmare"]
 
 [undying]
 	#If enabled, default undead creatures will be given the undying trait.
