--- a/config/strangematter-common.toml
+++ b/config/strangematter-common.toml
@@ -11,32 +11,32 @@
 		enableGravityAnomaly = true
 		#Gravity Anomaly spawn rarity (1/N chance per chunk)
 		#Range: 1 ~ 100000
-		gravityAnomalyRarity = 500
+		gravityAnomalyRarity = 1000
 		#Enable Temporal Bloom world generation
 		enableTemporalBloom = true
 		#Temporal Bloom spawn rarity (1/N chance per chunk)
 		#Range: 1 ~ 100000
-		temporalBloomRarity = 500
+		temporalBloomRarity = 1000
 		#Enable Warp Gate world generation
 		enableWarpGate = true
 		#Warp Gate spawn rarity (1/N chance per chunk)
 		#Range: 1 ~ 100000
-		warpGateRarity = 400
+		warpGateRarity = 800
 		#Enable Energetic Rift world generation
 		enableEnergeticRift = true
 		#Energetic Rift spawn rarity (1/N chance per chunk)
 		#Range: 1 ~ 100000
-		energeticRiftRarity = 500
+		energeticRiftRarity = 1000
 		#Enable Echoing Shadow world generation
 		enableEchoingShadow = true
 		#Echoing Shadow spawn rarity (1/N chance per chunk)
 		#Range: 1 ~ 100000
-		echoingShadowRarity = 600
+		echoingShadowRarity = 1200
 		#Enable Thoughtwell world generation
 		enableThoughtwell = true
 		#Thoughtwell spawn rarity (1/N chance per chunk)
 		#Range: 1 ~ 100000
-		thoughtwellRarity = 500
+		thoughtwellRarity = 1000
 
 	#Ore Generation Configuration
 	[worldgen.ores]
@@ -62,11 +62,11 @@
 	#Control the generation of custom villager structures
 	[worldgen.villager_structures]
 		#Enable Anomaly Scientist Lab generation in villages
-		enableAnomalyScientistHouse = true
+		enableAnomalyScientistHouse = false
 		#Weight for Anomaly Scientist Lab in village generation (higher = more common)
 		#Default village houses have weights around 1-10, with 5 being moderately common
 		#Range: 1 ~ 100
-		anomalyScientistHouseWeight = 6
+		anomalyScientistHouseWeight = 1
 
 #Anomaly Effects Configuration
 #Control the behavior and strength of anomaly effects
@@ -78,10 +78,10 @@
 		enableEffects = true
 		#Levitation effect radius in blocks
 		#Range: 1.0 ~ 32.0
-		levitationRadius = 24.0
+		levitationRadius = 6.0
 		#Levitation force strength (higher = stronger)
 		#Range: 0.01 ~ 1.0
-		levitationForce = 0.5
+		levitationForce = 1.0
 		#Research points granted when scanned
 		#Range: 1 ~ 1000
 		researchPoints = 10
@@ -182,10 +182,10 @@
 	[energy.resonant_burner]
 		#Energy generated per tick (RE/t)
 		#Range: 1 ~ 10000
-		energyPerTick = 20
+		energyPerTick = 70
 		#Internal energy storage capacity (RE)
 		#Range: 100 ~ 1000000
-		energyStorage = 10000
+		energyStorage = 100000
 		#Energy transfer rate to adjacent blocks per tick (RE/t)
 		#Range: 1 ~ 100000
 		transferRate = 1000
@@ -217,7 +217,7 @@
 	[energy.riftStabilizer]
 		#Energy generated per tick
 		#Range: 1 ~ 10000
-		energyPerTick = 100
+		energyPerTick = 120
 		#Maximum energy storage
 		#Range: 1000 ~ 1000000
 		energyStorage = 100000
@@ -235,7 +235,7 @@
 	[energy.resonant_conduit]
 		#Energy transfer rate per tick through conduits (RE/t)
 		#Range: 1 ~ 100000
-		transferRate = 500
+		transferRate = 50000
 		#Network cache update interval in ticks (20 ticks = 1 second)
 		#Range: 1 ~ 600
 		networkUpdateInterval = 20
@@ -244,14 +244,14 @@
 		maxNetworkSize = 64
 		#Energy transfer penalty per block distance (0.0 = no penalty, 0.1 = 10% loss per block)
 		#Range: 0.0 ~ 1.0
-		distancePenalty = 0.05
+		distancePenalty = 0.03
 
 #Research System Configuration
 #Control research costs and progression
 [research]
 	#Global multiplier for all research node costs (1.0 = default, 0.5 = half cost, 2.0 = double cost)
 	#Range: 0.0 ~ 10.0
-	costMultiplier = 1.2
+	costMultiplier = 1.0
 
 	#Individual Research Node Costs
 	#Override costs for specific research nodes. Set to -1 to use default values.
@@ -352,7 +352,7 @@
 		#Actual rate = baseRate / number_of_active_minigames
 		#More active minigames = slower increase = more time to stabilize
 		#Range: 1.0E-4 ~ 0.1
-		baseIncreaseRate = 0.001
+		baseIncreaseRate = 0.005
 
 	#Energy Minigame Settings (Wave Alignment)
 	[minigames.energy]
