--- a/config/borninconfiguration-general.toml
+++ b/config/borninconfiguration-general.toml
@@ -536,7 +536,7 @@
 			#Range: 0.0 ~ 1.7976931348623157E308
 			KRAMPUS_HENCHMAN_SPEED = 0.29
 			#.
-			KRAMPUS_HENCHMAN_SPAWNING_ENABLED = true
+			KRAMPUS_HENCHMAN_SPAWNING_ENABLED = false
 
 		[Weapons.Mobs.Krampus]
 			#.
