--- a/config/asyncparticles/asyncparticles-mixin.properties
+++ b/config/asyncparticles/asyncparticles-mixin.properties
@@ -8,7 +8,7 @@
 #replaceRandom: A comma-separated list of classes that require multithreaded random sources.
 #create$contraptionNoParticleCollision: A comma-separated list of classes extending 'AbstractContraptionEntity' that should not collide with particles.
 #
-#Fri Oct 31 13:11:49 EDT 2025
+#Tue Nov 04 12:03:54 EST 2025
 safeClassInstanceMultiMap=true
 particle$noLightCache=dev.shadowsoffire.gateways.client.GatewayParticle,com.chailotl.particular.particles.FireflyParticle,com.lowdragmc.photon.client.gameobject.FXObject,net.diebuddies.minecraft.weather.WeatherParticle
 safeBlockEntityMap=false
