--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,5 +1,5 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Fri Oct 31 13:12:03 EDT 2025
+#Tue Nov 04 12:56:10 EST 2025
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
