--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,8 +1,8 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Tue Nov 04 12:56:10 EST 2025
+#Fri Nov 07 19:20:25 EST 2025
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=12
-shaderPack=Mellow Shader v1.5.5a.zip
+shaderPack=Mellow Shader v2.2.zip
 enableShaders=true
